fix: text alignment and z-index

--- a/style.css
+++ b/style.css
@@ -175,12 +175,14 @@ header ul li a:hover {
   width: 484px;
   top: -1px;
   right: -4px;
+  z-index: 1;
 }
 
 .phone-vertical-img {
   width: 240px;
   top: -1px;
   right: 3px;
+  z-index: 1;
 }
 
 .phone-horizontal-screen,
@@ -192,12 +194,14 @@ header ul li a:hover {
   width: 339px;
   top: 10px;
   right: 84px;
+  z-index: 2;
 }
 
 .phone-vertical-screen {
   width: 194px;
   top: 61px;
   right: 38px;
+  z-index: 2;
 }
 
 .phone-home-button {
@@ -205,6 +209,7 @@ header ul li a:hover {
   cursor: pointer;
   width: 43px;
   border-radius: 43px;
+  z-index: 2;
   transition: all 0.2s ease;
 }
 
@@ -480,6 +485,11 @@ header ul li a:hover {
   white-space: pre;
 }
 
+.about-card:nth-child(2) .card-name {
+  position: relative;
+  left: -2px;
+}
+
 .card-description {
   font-size: 12px;
   color: #767e9e;
@@ -487,6 +497,7 @@ header ul li a:hover {
   padding-top: 8px;
   line-height: 21px;
   letter-spacing: -0.16px;
+  text-align: justify;
 }
 
 .card-socials {
@@ -624,6 +635,7 @@ textarea {
   font-family: "Lato Regular";
   margin-top: 6px;
   line-height: 22px;
+  text-align: justify;
 }
 
 .contact-list {
